2014-07-10  Kaz Kylheku  <kaz@kylheku.com>

	Version 92.

	* RELNOTES: Updated.

	* configure, txr.1: Bumped version.

	* share/txr/stdlib/ver.txr: Likewise

2014-07-10  Kaz Kylheku  <kaz@kylheku.com>

	* tests/011/macros-2.txr: Added test for labels shadowing macro,
	and let shadowing symacro.

	* tests/011/macros-2.expected: Regenerated

	* txr.vim: Regenerated.

2014-07-10  Kaz Kylheku  <kaz@kylheku.com>

	Implementing local function binding constructs.

	* eval.c (fbind_s, lbind_s, flet_s, labels_s): New symbol globals.
	(env_fb_to_fb): New static function.
	(lookup_mac): Implement the same shadow check for function macros
	that is done for symbol macros, because we now have local functions
	that can shadow local macros.
	(fbindings_helper, op_fbind, make_fun_shadowing_env,
	expand_fbind_vars, me_flet_labels): New static functions.
	(expand): Add cases for fbind and lbind.
	(eval_init): Intern the four new symbols.
	Register sys:fbind and sys:lbind operators.
	Register flet and labels macros.

	* txr.1: Documented flet and labels.

2014-07-08  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (bindings_helper): New parameter to indicate that
	the caller needs the return value, so the function
	can avoid consing up a list that will be thrown away.
	(op_let): Pass nil argument to new parameter of bindings_helper.
	(op_each, op_for): Pass t to indicate that the return value
	is needed.

2014-07-08  Kaz Kylheku  <kaz@kylheku.com>

	* LICENSE: Adding copyright for MPI Library.

	* METALICENSE: Adding notes about MPI.

2014-07-07  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile: install the LICENSE and METALICENSE files into the data
	directory.

	* txr.c (help): Help text updated to document --license option.
	(license): New function.
	(txr_main): Implement --license option.

	* unwind.h (uw_catch): Add cast to suppress warning about unused symbol.

	* txr.1: Document --license option.

2014-07-07  Kaz Kylheku  <kaz@kylheku.com>
